[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/pickup/PadlockKeys.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/art/interactive/clocks/ClockFinished.png" type="Texture" id=2]
[ext_resource path="res://scenes/interact/Clocks.gd" type="Script" id=4]
[ext_resource path="res://scenes/interact/FSClocks.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/art/fullscreen/clocks.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 8 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 8 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 8 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 8 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 8 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "clocks",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 32, 48 )

[node name="Clocks" type="Node2D"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="FSClocks" parent="CanvasLayer" instance=ExtResource( 6 )]
popup_exclusive = false

[node name="Area2D" type="Area2D" parent="."]

[node name="Clocks" type="AnimatedSprite" parent="Area2D"]
position = Vector2( 504, 176 )
scale = Vector2( 4, 4 )
frames = SubResource( 9 )
animation = "clocks"

[node name="ClockFinished" type="Sprite" parent="Area2D"]
position = Vector2( 504, 176 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="PadlockKey" parent="Area2D/ClockFinished" instance=ExtResource( 1 )]
position = Vector2( -316, -156 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 504, 176 )
shape = SubResource( 10 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
